# rubricagent

./: CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
rubricagent/: __init__.py  eval.py  evolve.py  judge.py  metrics.py  report.py  rubric.py
tests/: test_rubricagent.py
