[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubricagent"
version = "0.1.0"
description = "Self-evolving rubrics for evaluating and improving LLM-agent skill-use."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "agents", "evaluation", "llm-as-judge", "rubric", "evals", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/rubricagent"

[tool.hatch.build.targets.wheel]
packages = ["rubricagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Pyflakes (dead code, undefined names), syntax errors, and import sorting.
# Style rules like line-length enforcement are intentionally left off.
select = ["E9", "F", "I"]
